--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,7 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  url: <%= ENV['DATABASE_URL'] %>
 
 development:
   <<: *default
@@ -80,6 +81,3 @@ test:
 #
 production:
   <<: *default
-  database: webhooks_production
-  username: webhooks
-  password: <%= ENV['WEBHOOKS_DATABASE_PASSWORD'] %>
