--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -48,3 +48,7 @@ jobs:
         run: |
           bundle exec rake test
           bundle exec rake test:system
+
+      - name: Lint
+        run: |
+          bundle exec rubocop
