--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,9 +1,18 @@
+Layout/LineLength:
+  Max: 177
+
+Layout/SpaceAroundMethodCallOperator:
+  Enabled: true
+
 Lint/NestedMethodDefinition:
   Exclude:
     - "app/jobs/up_for_grabs_pull_request_project_analyzer_job.rb"
 
-Metrics/LineLength:
-  Max: 177
+Lint/RaiseException:
+  Enabled: true
+
+Lint/StructNewOverride:
+  Enabled: true
 
 Metrics/AbcSize:
   Enabled: false
@@ -28,3 +37,15 @@ Style/Documentation:
 
 Style/ClassAndModuleChildren:
   Enabled: false
+
+Style/ExponentialNotation:
+  Enabled: true
+
+Style/HashEachMethods:
+  Enabled: true
+
+Style/HashTransformKeys:
+  Enabled: true
+
+Style/HashTransformValues:
+  Enabled: true
