--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,10 +3,10 @@ name: Rails Tests
 on:
   pull_request:
     branches:
-      - "master"
+      - "latest"
   push:
     branches:
-      - "master"
+      - "latest"
 
 jobs:
   build:
