--- a/package.json
+++ b/package.json
@@ -5,11 +5,8 @@
     "@rails/actioncable": "^7.0.0",
     "@rails/activestorage": "^7.0.0",
     "@rails/ujs": "^7.0.0",
-    "@rails/webpacker": "^5.4.3",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
-  "devDependencies": {
-    "webpack-dev-server": "^4.6.0"
-  }
+  "devDependencies": {}
 }
