add step so that asset failure is visible in CI

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,6 +39,7 @@ jobs:
           gem install bundler
           bundle install --jobs 4 --retry 3
           bin/rails db:setup
+          bin/rails assets:precompile
 
       - name: Run Tests
         env:
